--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
 
 
                             <li><a href="our-work.html">Our Work</a></li>
+                           
                             <li><a href="blog.html">Blog</a></li>
-
+                            <li><a href="team.html">Meet the Team</a></li>
 
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
