--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,9 @@
 
 
                             <li><a href="our-work.html">Our Work</a></li>
+                            
                             <li><a href="blog.html">Blog</a></li>
-
+                            <li><a href="team.html">Meet the Team</a></li>
 
                             <li class="current-menu-item"><a href="contact.html">Contact</a></li>
                         </ul>
